# GraphRTL

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: ast_to_pyg_usage.md  collecting_training_data.md  data_collection_quickref.md  gnn_for_power_estimation.md  gnn_module.md  gnn_power_estimation_guide.md  masterrtl_integration.md
examples/: isac_sog.sh  power.csv  s1196_bench.sog.v  s1238_bench.sog.v  s13207_bench.sog.v  s1423_bench.sog.v  s1488_bench.sog.v  s1494_bench.sog.v  s15850_bench.sog.v  s208_1_bench.sog.v  s27_bench.sog.v  s298_bench.sog.v  s344_bench.sog.v  s349_bench.sog.v  s35932_bench.sog.v  s382_bench.sog.v  s38417_bench.sog.v  s38584_bench.sog.v  s386_bench.sog.v  s400_bench.sog.v  s420_1_bench.sog.v  s444_bench.sog.v  s510_bench.sog.v  s526_bench.sog.v  s526n_bench.sog.v  s5378_bench.sog.v  s641_bench.sog.v  s713_bench.sog.v  s820_bench.sog.v  s832_bench.sog.v  s838_1_bench.sog.v  s9234_1_bench.sog.v  s953_bench.sog.v  train_power_from_csv.py  train_power_gnn.py
examples/models/: power_gnn_hybrid_gcn.pt
src/graphrtl/: __init__.py  version.py  yosys.py
src/graphrtl/cli/: __init__.py  cli.py  train.py  yosys.py
src/graphrtl/ml/: __init__.py  feature_extraction.py  gnn_model.py  training.py
src/graphrtl/sog/: __init__.py  ast_to_pyg.py  directed_graph.py  sog_node.py
tests/: __init__.py  test_ast_to_pyg.py  test_cli.py
tests/fixtures/: memory.sog.v
